fix section spacing

--- a/src/sass/global/about.sass
+++ b/src/sass/global/about.sass
@@ -133,7 +133,7 @@
                             width: 24px
 
 .portfolio-version-section
-    background: red
+    padding: 3.5rem 0 4.5rem 0
 
 .quotes-section
     height: 50vh
