--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -180,7 +180,7 @@ button {
 }
 
 .portfolio-version-section {
-  background: red;
+  padding: 3.5rem 0 4.5rem 0;
 }
 
 .quotes-section {
